--- a/index.html
+++ b/index.html
@@ -31,36 +31,53 @@
                     </div>
                 </div>
         </div>
-        
+    </main>
+    <section>
         <div class="fecha">
             <h3>¿Cuando es la fiesta?</h3>
-            <p>La fiesta es el dia 9 de Agosto del 2025.</p>
+            <p>Se realizara el dia 9 de Agosto del 2025.</p>
+            <img class="icono" src="img/calendar.png" alt="">
             <a type="button" class="btn btn-danger">Agendar en Calendario</a>
         </div>
 
         <div class="donde">
-            <h3>¿Donde se realizara?</h3>
+            <h3>¿En dondé?</h3>
             <p>En el Club Comercio de Rauch.</p>
+            <img class="icono" src="img/ubi.png" alt="">
             <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Como llegar</a>
         </div>
 
         <div class="regalo">
-            <h3>¿Deseas regalarme algo?</h3>
+            <h3>¿Queres regalarme algo?</h3>
             <p>Te dejo mis datos, no te compliques</p>
-            <a type="button" class="btn btn-light">Datos</a>
+            <img class="icono" src="img/corazon.png" alt="">
+            <a type="button" class="btn btn-light btnDatos">Obtener datos</a>
         </div>
 
         <div class="confirmar-asistencia">
             <h3>Quiero que seas parte de mis 15</h3>
             <p>Confirmar antes del xx de Julio del 2025</p>
+            <img class="icono"src="img/123.png" alt="">
             <a type="button" class="btn btn-dark">Confirmar asistencia</a>
         </div>
 
         <div class="que-musica-te-gusta">
             <h3>¿Queres escuchar algo en especial?</h3>
             <p>Mandame lo que queres escuchar</p>
+            <img class="icono" src="img/music.png" alt="">
             <a type="button" class="btn btn-dark">Enviar música</a>
         </div>
-    </main>
+    </section>
+    <section>
+        <div id="datos" class="invisible">
+            <div class="contenido-ventana">
+                <h4>Datos bancarios</h4>
+                <p>Banco: BAPRO</p>
+                <p>Alias: pri.fiesta.15</p>
+                <p>CBU: xxxxxxxxxxxxxxxxxxxx</p>
+                <button type="button" class="btn btn-dark cerrar">Cerrar</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
