--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>¿Cuando es la fiesta?</h3>
             <p>Se realizara el dia 9 de Agosto del 2025.</p>
             <img class="icono" src="img/calendar.png" alt="">
-            <a type="button" class="btn btn-danger">Agendar en Calendario</a>
+            <a href="https://calendar.app.google/bv8zYa8KrmbmizYg6" type="button" class="btn btn-danger">Agendar en Calendario</a>
         </div>
 
         <div class="donde">
@@ -48,7 +48,7 @@
         </div>
 
         <div class="regalo">
-            <h3>¿Queres regalarme algo?</h3>
+            <h3>¿Queres hacerme un regalo?</h3>
             <p>Te dejo mis datos, no te compliques</p>
             <img class="icono" src="img/corazon.png" alt="">
             <a type="button" class="btn btn-light btnDatos">Obtener datos</a>
