--- a/index.html
+++ b/index.html
@@ -80,5 +80,10 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer">
+            <a href="https://www.linkedin.com/in/ayrtonmobilio/">© Priscila XV Fest by Mobi Designer</a>
+        </div>
+    </footer>
 </body>
 </html>
