fix: ortografia y redaccion

--- a/index.html
+++ b/index.html
@@ -35,36 +35,36 @@
     </main>
     <section>
         <div class="fecha">
-            <h3>¿Cuando es la fiesta?</h3>
-            <p>Se realizara el dia 9 de Agosto del 2025.</p>
+            <h3>¿Cuándo es la fiesta?</h3>
+            <p>Se realizará el dia 9 de agosto de 2025.</p>
             <img class="icono" src="img/calendar.png" alt="">
             <a href="https://calendar.app.google/bv8zYa8KrmbmizYg6" type="button" class="btn btn-danger">Agendar en Calendario</a>
         </div>
 
         <div class="donde">
-            <h3>¿En dondé?</h3>
+            <h3>¿Dondé es?</h3>
             <p>En el Club Comercio de Rauch.</p>
             <img class="icono" src="img/ubi.png" alt="">
-            <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Como llegar</a>
+            <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Cómo llegar</a>
         </div>
 
         <div class="regalo">
-            <h3>¿Queres hacerme un regalo?</h3>
+            <h3>¿Querés hacerme un regalo?</h3>
             <p>Te dejo mis datos, no te compliques</p>
             <img class="icono" src="img/corazon.png" alt="">
             <a type="button" class="btn btn-light btnDatos">Obtener datos</a>
         </div>
 
         <div class="confirmar-asistencia">
-            <h3>Quiero que seas parte de mis 15</h3>
-            <p>Confirmar antes del xx de Julio del 2025</p>
+            <h3>¡Quiero que seas parte de mis 15!</h3>
+            <p>Confirmá tu asistencia antes del xx de Julio de 2025</p>
             <img class="icono"src="img/123.png" alt="">
             <a type="button" class="btn btn-dark">Confirmar asistencia</a>
         </div>
 
         <div class="que-musica-te-gusta">
-            <h3>¿Queres escuchar algo en especial?</h3>
-            <p>Mandame lo que queres escuchar</p>
+            <h3>¿Querés escuchar algo en especial?</h3>
+            <p>¡Dejame tus recomendaciones musicales para que suene lo que más te gusta!</p>
             <img class="icono" src="img/music.png" alt="">
             <a type="button" class="btn btn-dark">Enviar música</a>
         </div>
