fix: cuenta regresiva

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="principal">
-            <h1 id="titulo" class="titulo">PRISCILA XV FEST</h1>
+            <h1 id="titulo" class="titulo">PRI XV FEST</h1>
                 <div class="cuenta-regresiva">
                     <div class="time">
                         <h4 class="dias"></h4>
@@ -38,7 +38,6 @@
             <h3>¿Cuándo es la fiesta?</h3>
             <p>Se realizará el dia 9 de agosto de 2025.</p>
             <img class="icono" src="img/calendar.png" alt="">
-            <a href="https://calendar.app.google/bv8zYa8KrmbmizYg6" type="button" class="btn btn-danger">Agendar en Calendario</a>
         </div>
 
         <div class="donde">
