--- a/index2.html
+++ b/index2.html
@@ -44,17 +44,17 @@
         </div>
 
         <div class="donde">
-            <h3>¿DONDÉ ES?</h3>
+            <h3>¿DONDÉ SERA EL EVENTO?</h3>
             <p>En el Club Comercio de Rauch.</p>
-            <img class="icono" src="img/ubi.png" alt="">
-            <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Cómo llegar</a>
+            <img class="icono" src="img/ubi2.png" alt="">
+            <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-light">Cómo llegar</a>
         </div>
 
         <div class="regalo">
-            <h3>¿QUERÉS HACERME UN REGALO?</h3>
-            <p>Te dejo mis datos, no te compliques</p>
-            <img class="icono" src="img/corazon.png" alt="">
-            <a type="button" class="btn btn-light btnDatos">Obtener datos</a>
+            <h3>¿REGALO? ¡NO TE COMPLIQUES!</h3>
+            <p>Te dejo mis datos del sobre virtual</p>
+            <img class="icono" src="img/regalo.png" alt="">
+            <a type="button" class="btn btn-dark btnDatos">Obtener datos</a>
         </div>
 
         <div class="confirmar-asistencia">
