--- a/index2.html
+++ b/index2.html
@@ -39,8 +39,8 @@
     <section>
         <div class="fecha">
             <h3>¿CUÁNDO ES LA FIESTA?</h3>
-            <p>Se realizará el dia 9 de agosto de 2025.</p>
-            <img class="icono" src="img/calendar.png" alt="">
+            <p>Guardá la fecha. No se repite.</p>
+            <img class="icono" src="img/calendar.png" alt="9 de agosto de 2025">
         </div>
 
         <div class="donde">
@@ -52,21 +52,21 @@
 
         <div class="regalo">
             <h3>¿REGALO? ¡NO TE COMPLIQUES!</h3>
-            <p>Te dejo mis datos del sobre virtual</p>
+            <p>Aca van mis datos. Sin vueltas, sin drama.</p>
             <img class="icono" src="img/regalo.png" alt="">
             <a type="button" class="btn btn-dark btnDatos">Obtener datos</a>
         </div>
 
         <div class="confirmar-asistencia">
             <h3>¡QUIERO QUE SEAS PARTE DE MIS 15!</h3>
-            <p>Confirmá tu asistencia antes del xx de Julio de 2025</p>
+            <p>Confirmá tu asistencia antes del xx de Julio de 2025. No es una fiesta. Es historia.</p>
             <img class="icono"src="img/123.png" alt="">
             <a type="button" class="btn btn-dark">Confirmar asistencia</a>
         </div>
 
         <div class="que-musica-te-gusta">
-            <h3>¿QUERÉS ESCUCHAR ALGO EN ESPECIAL?</h3>
-            <p>¡Dejame tus recomendaciones musicales para que suene lo que más te gusta!</p>
+            <h3>¿TENÉS UN TEMA QUE DEBE SONAR?</h3>
+            <p>Mandá tu recomendación y hacé que explote la pista.</p>
             <img class="icono" src="img/music.png" alt="">
             <a type="button" class="btn btn-dark">Enviar música</a>
         </div>
