solucion a scroll en x

--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,8 @@
         <div class="principal">
             <img class="claqueta"src="img/123.png" alt="">
             <h1 class="titulo">PRI XV FEST</h1>
-            <p>No es un cumpleaños. Es EL EVENTO. Priscila cumple 15. Y lo va a festejar como se le canta: brillo y actitud de reina</p>
+            <p>No es un cumpleaños.</p>
+            <p>Es EL EVENTO. Priscila cumple 15. Y lo va a festejar como se le canta: brillo y actitud de reina.</p>
                 <div class="cuenta-regresiva">
                     <div class="time">
                         <h4 class="dias"></h4>
