--- a/index3.html
+++ b/index3.html
@@ -17,8 +17,7 @@
         <div class="principal">
             <img class="claqueta"src="img/123.png" alt="">
             <h1 class="titulo">PRI XV FEST</h1>
-            <p>No es un cumpleaños.</p>
-            <p>Es EL EVENTO. Priscila cumple 15. Y lo va a festejar como se le canta: brillo y actitud de reina.</p>
+            <p>No es un cumpleaños. </br>Es EL EVENTO. Priscila cumple 15. Y lo va a festejar como se le canta: brillo y actitud de reina.</p>
                 <div class="cuenta-regresiva">
                     <div class="time">
                         <h4 class="dias"></h4>
@@ -43,8 +42,7 @@
         <div class="fecha color-negro">
             <h3>¿CUÁNDO ES?</h3>
             <img class="icono" src="img/iconos/calendario.png" alt="9 de agosto de 2025">
-            <p>Sábado 9 de agosto – 2X:00 hs</p>
-            <p>Noche larga, cero excusas.</p>
+            <p>Sábado 9 de agosto – 2X:00 hs</br>Noche larga, cero excusas.</p>
         </div>
 
         <div class="donde colorDorado">
@@ -57,8 +55,7 @@
         <div class="dresscode color-rojo">
             <h3>DRESSCODE</h3>
             <img class="icono" src="img/iconos/estrella.png" alt="">
-            <p>Formal. Pero no aburrido</p>
-            <p>Vení list@ para salir en Pinterest.</p>
+            <p>Formal. Pero no aburrido</br>Vení list@ para salir en Pinterest.</p>
         </div>
 
         <div class="regalo color-negro">
