color de fondo del html

--- a/index3.html
+++ b/index3.html
@@ -90,12 +90,10 @@
             </div>
         </div>
     </section>
-    <!--
     <footer>
         <div class="footer">
-            <a href="https://www.linkedin.com/in/ayrtonmobilio/">© Priscila XV Fest by Mobi Designer</a>
+            <a href="https://www.linkedin.com/in/ayrtonmobilio/">© Pri XV Fest by Mobi Designer</a>
         </div>
     </footer>
-    -->
 </body>
 </html>
