--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <script type="module" src="js/script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script type="module" src="js/script.js">
+    </script><link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <div class="principal">
-            <h1 id="titulo" class="titulo">PRI XV FEST</h1>
+            <img class="claqueta"src="img/123.png" alt="">
+            <h1 class="titulo">PRI XV FEST</h1>
+            <p>No es un cumpleaños. </br>Es EL EVENTO. Priscila cumple 15. Y lo va a festejar como se le canta: brillo y actitud de reina.</p>
                 <div class="cuenta-regresiva">
                     <div class="time">
                         <h4 class="dias"></h4>
@@ -37,38 +39,44 @@
         </div>
     </main>
     <section>
-        <div class="fecha">
-            <h3>¿Cuándo es la fiesta?</h3>
-            <p>Se realizará el dia 9 de agosto de 2025.</p>
-            <img class="icono" src="img/calendar.png" alt="">
+        <div class="fecha color-negro">
+            <h3>¿CUÁNDO ES?</h3>
+            <img class="icono" src="img/iconos/calendario.png" alt="9 de agosto de 2025">
+            <p>Sábado 9 de agosto – 20:30 hs</br>Noche larga, cero excusas.</p>
         </div>
 
-        <div class="donde">
-            <h3>¿Dondé es?</h3>
-            <p>En el Club Comercio de Rauch.</p>
-            <img class="icono" src="img/ubi.png" alt="">
+        <div class="donde colorDorado">
+            <h3>¿DONDÉ ES?</h3>
+            <p>Club de Comercio de Rauch. Ni te hagas el/la perdid@. Ya sabés dónde es. Y si no sabés, hacé click en el boton de abajo</p>
+            <img class="icono invertido" src="img/iconos/ubi.png" alt="">
             <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Cómo llegar</a>
         </div>
 
-        <div class="regalo">
-            <h3>¿Querés hacerme un regalo?</h3>
-            <p>Te dejo mis datos, no te compliques</p>
-            <img class="icono" src="img/corazon.png" alt="">
+        <div class="dresscode color-rojo">
+            <h3>DRESSCODE</h3>
+            <img class="icono" src="img/iconos/estrella.png" alt="">
+            <p>Formal. Pero no aburrido</br>Vení list@ para salir en Pinterest.</p>
+        </div>
+
+        <div class="regalo color-negro">
+            <h3>REGALO</h3>
+            <p>¿Querés regalar algo? ¡No te compliques! Aca van mis datos. Sin vueltas, sin drama.</p>
+            <img class="icono" src="img/iconos/regalo.png" alt="">
             <a type="button" class="btn btn-light btnDatos">Obtener datos</a>
         </div>
 
-        <div class="confirmar-asistencia">
-            <h3>¡Quiero que seas parte de mis 15!</h3>
-            <p>Confirmá tu asistencia antes del xx de Julio de 2025</p>
-            <img class="icono"src="img/123.png" alt="">
-            <a type="button" class="btn btn-dark">Confirmar asistencia</a>
+        <div class="confirmar-asistencia colorDorado">
+            <h3>ASISTENCIA</h3>
+            <p>Quiero que seas parte, confirmá acá abajo antes del 20 de Julio de 2025. La lista no se arma sola. No es una fiesta. Es historia.</p>
+            <img class="icono invertido" src="img/iconos/fiest.png" alt="">
+            <a href="https://forms.gle/LY5oFac4bw6fY5uR9" type="button" class="btn btn-dark">Acepto la invitación</a>
         </div>
 
-        <div class="que-musica-te-gusta">
-            <h3>¿Querés escuchar algo en especial?</h3>
-            <p>¡Dejame tus recomendaciones musicales para que suene lo que más te gusta!</p>
-            <img class="icono" src="img/music.png" alt="">
-            <a type="button" class="btn btn-dark">Enviar música</a>
+        <div class="que-musica-te-gusta color-rojo">
+            <h3>MÚSICA</h3>
+            <p>Tus canciones también pueden estar en la playlist. Mandá el tema que sí o sí tiene que sonar. Si no suena, es porque no lo mandaste.</p>
+            <img class="icono" src="img/iconos/music.png" alt="">
+            <a href="https://forms.gle/GSLYSDZx7KMs5d5N7" type="button" class="btn btn-light">Enviar música</a>
         </div>
     </section>
     <section>
@@ -84,7 +92,7 @@
     </section>
     <footer>
         <div class="footer">
-            <a href="https://www.linkedin.com/in/ayrtonmobilio/">© Priscila XV Fest by Mobi Designer</a>
+            <a href="https://www.linkedin.com/in/ayrtonmobilio/">© Pri XV Fest by Mobi Designer</a>
         </div>
     </footer>
 </body>
