--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div>
+        <a href="#" id="playPauseBtn" class="floating-btn"></a>
+        <audio id="audio" src="musica/Hero (Unplugged).mp3" loop></audio>
+
+    </div>
     <main>
         <div class="principal">
             <img class="claqueta"src="img/123.png" alt="">
