--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="donde colorDorado">
-            <h3>¿DONDÉ ES?</h3>
-            <p>Club de Comercio de Rauch. Ni te hagas el/la perdid@. Ya sabés dónde es. Y si no sabés, hacé click en el boton de abajo</p>
+            <h3>¿DÓNDE ES?</h3>
+            <p>Club de Comercio de Rauch. Ni te hagas el/la perdid@. Ya sabés dónde es. Y si no sabés, hacé click en el boton de abajo.</p>
             <img class="icono invertido" src="img/iconos/ubi.png" alt="">
             <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Cómo llegar</a>
         </div>
@@ -60,12 +60,12 @@
         <div class="dresscode color-rojo">
             <h3>DRESSCODE</h3>
             <img class="icono" src="img/iconos/estrella.png" alt="">
-            <p>Formal. Pero no aburrido</br>Vení list@ para salir en Pinterest.</p>
+            <p>Formal. Pero no aburrido.</br>Vení list@ para salir en Pinterest.</p>
         </div>
 
         <div class="regalo color-negro">
             <h3>REGALO</h3>
-            <p>¿Querés regalar algo? ¡No te compliques! Aca van mis datos. Sin vueltas, sin drama.</p>
+            <p>¿Querés regalar algo? ¡No te compliques! Acá van mis datos. Sin vueltas, sin drama.</p>
             <img class="icono" src="img/iconos/regalo.png" alt="">
             <a type="button" class="btn btn-light btnDatos">Obtener datos</a>
         </div>
