--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="donde colorDorado">
             <h3>¿DÓNDE ES?</h3>
-            <p>Club de Comercio de Rauch. Ni te hagas el/la perdid@. Ya sabés dónde es. Y si no sabés, hacé click en el boton de abajo.</p>
+            <p>Club Comercio de Rauch. Ni te hagas el/la perdid@. Ya sabés dónde es. Y si no sabés, hacé click en el boton de abajo.</p>
             <img class="icono invertido" src="img/iconos/ubi.png" alt="">
             <a href="https://goo.su/YWukUX5"  type="button" class="btn btn-dark">Cómo llegar</a>
         </div>
