--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <div id="datos" class="invisible">
             <div class="contenido-ventana">
                 <h4>Datos bancarios</h4>
-                <p>Banco: BAPRO</p>
-                <p>Alias: pri.fiesta.15</p>
-                <p>CBU: xxxxxxxxxxxxxxxxxxxx</p>
+                <p>Banco: MERCADO PAGO</p>
+                <p>Alias: pri.fiesta.xv</p>
+                <p>CVU: 0000003100029594910720</p>
                 <button type="button" class="btn btn-dark cerrar">Cerrar</button>
             </div>
         </div>
